examples/invalid/AutoIdSequential.idl
// SPDX-License-Identifier: Apache-2.0 OR MIT
// Copyright (c) 2025-2026 naskel.com

@autoid(SEQUENTIAL)
struct S {
    @id(2) int32_t a;
    @id(1) int32_t b;
};

